# ftw

./: .gitattributes  .gitignore  HACKING.md  Makefile  README.md  SCORING.md  deploy_frontend_dev.sh  dune-project  ftw.opam  ftw_bin.opam  hookgen.sh  in.toml  out.toml  package-lock.json  test.sh
.github/workflows/: playwright.yml  workflow.yml
doc/: api.yaml  coding_a_concept.md  concepts.md  dune  index.mld
src/: backendexample.db  dune  openapi.json
src/backend/: api.ml  artefact.ml  bib.ml  category.ml  competition.ml  dancer.ml  db-init.sql  division.ml  dune  error.ml  event.ml  example.db  heat.ml  judge.ml  kind.ml  main.ml  misc.ml  options.ml  page.ml  phase.ml  ranking.ml  results.ml  router.ml  spec.ml  state.ml  types.ml  utils.ml
src/frontend/: .env.dev  .env.development  .env.production  .gitignore  package-lock.json  package.json  package_create_react_app.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
src/frontend/app/: app.css  auth.server.ts  axios.ts  configServer.ts  configloader.ts  context.ts  dehydrated.ts  queryClient.ts  root.tsx  routes.ts  sessions.server.ts
src/frontend/app/public/: index.html
src/frontend/app/routes/: home.tsx  login.tsx  logout.tsx
src/frontend/app/styles/: ContentStyle.css
src/frontend/public/: config.json
src/frontend/src/: App.js  App.tsx  images.d.ts  index.tsx
src/frontend/src/components/: About.js  Accueil.js  ArtefactDescription.tsx  ArtefactFormElement.tsx  BibList.tsx  CompetitionList.tsx  CompetitionPage.tsx  EventList.js  (+24 more)
src/frontend/tests/: ftw.spec.ts
src/hookgen/: .gitignore  openapi.json  orval.config.js  package-lock.json  package.json  pretty_print_openapi_json.js  test.json  test_orval.js
src/hookgen/api/: custom_axios_instance.ts
src/lib/: artefact.ml  artefact.mli  bib.ml  bib.mli  bonus.ml  bonus.mli  bool.ml  category.ml  category.mli  competition.ml  competition.mli  competitor.ml  conv.ml  conv.mli  dancer.ml  dancer.mli  date.ml  date.mli  division.ml  division.mli  divisions.ml  divisions.mli  dune  event.ml  event.mli  export.ml  forbidden.ml  forbidden.mli  global.ml  heat.ml  heat.mli  id.ml  id.mli  import.ml  interval.ml  judge.ml  judge.mli  judging.ml  judging.mli  kind.ml  (+25 more)
src/migration/: migrate_1_to_2.sql  schema_1.sql  schema_2.sql
src/utils/: dune  suffix_tree.ml  suffix_tree.mli
tests/: dune  test.db  test.sh  test_origin.db
tests/api.t/: run.t  test.db
tests/archive/: 2017-04-29_CC_Ulm.toml  2017-06-01_JnJ_Ulm.toml  2018-06-15_JnJ_Ulm.toml  2018-06-16_CC_Ulm.toml  2019-05-04_CC_Ulm.toml  2019-05-26_P4T.toml  2022-05-27_P4T.toml  2025-12-206_ParisPlage.toml
tests/db-init.t/: run.t
tests/import/: 2017-04-29_CC_Ulm.toml  2017-06-01_JnJ_Ulm.toml  2018-06-15_JnJ_Ulm.toml  2018-06-16_CC_Ulm.toml  2019-05-04_CC_Ulm.toml  2019-05-26_P4T.toml
tests/import.t/: bib.toml  run.t
tests/routes.t/: run.t
tests/schema/: run.t
(+156 files in other folders)
