# For The Win, dancing competition software
opam-version: "2.0"
name: "ftw"
version: "dev"
authors: "Guillaume Bury <guillaume.bury@gmail.com>"
maintainer: "Guillaume Bury <guillaume.bury@gmail.com>"
license: "GPL-3.0-or-later"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" { >= "4.04.0"}
  "dune"
  "sqlite3"
  "sqlite3_utils"
  "containers"
  "gen"
  "bos"
  "fpath"
  "logs"
  "fmt"
  "uutf"
  "uunf"
  "spelll"
  "otoml"
  "ppx_deriving"
  "ppx_deriving_yojson"
  "odoc" {with-doc}
  "sherlodoc" {with-doc}
]
homepage: "https://github.com/scr4t-dance/ftw"
dev-repo: "git+https://github.com/scr4t-dance/ftw.git"
bug-reports: "git+https://github.com/scr4t-dance/ftw/issues"

synopsis: "For The Win: a dance competition library"
description: "Library for the FTW server"
