
; main server binary
(executable
  (name         main)
  (public_name  ftw)
  (package      ftw_bin)
  (preprocess
    (pps lwt_ppx ppx_deriving.show ppx_deriving_yojson)
  )
  (libraries
     ftw
     openapi_router dream
     fmt fmt.cli logs logs.cli logs.fmt
     cmdliner containers yojson)
)

; crunch static files
(rule
  (target static.ml)
  (deps (source_tree static))
  (action (with-stdout-to %{null}
   (run ocaml-crunch -m plain static -o %{target}))))
